--- a/src/styles/_layout.less
+++ b/src/styles/_layout.less
@@ -1,215 +1,6 @@
 @import "_variables.less";
 @import "_mixins.less";
-
-.wrapper {
-  padding: 1.07rem;
-
-  .responsive(@xxl; {
-    padding: 1.07rem 12.86rem;
-   });
-}
-
-.burger {
-  background: url(../img/burger.svg) no-repeat center center;
-}
-
-.btn {
-  background-color: @blue;
-  color: @white;
-  border: 0;
-  padding: 1.76rem;
-  width: 100%;
-  font-weight: 600;
-  margin-bottom: 1em;
-  text-transform: uppercase;
-  // .transition(all 0.5s linear);
-
-  &:hover {
-    background: linear-gradient(to bottom right, @blue,#2687E0);  
-  }
-
-  .responsive(@lg; {
-    width: 18.85rem;
-  });
-}
-
-.banner-title {
-  font-size: 30px;
-  line-height: 33px;
-
-  .responsive(@lg; {
-    font-size: 70px;
-    line-height: 80px;
-    font-weight: 900;
-  });
-}
-
-.section-title {
-  font-size: 25px;
-  font-weight: 700;
-
-  .responsive(@lg; {
-    font-size: 50px;
-    line-height: 60px;
-  });
-}
-
-.menu {
-  display: flex;
-  justify-content: center;
-  gap: 2em;
-  text-transform: uppercase;
-
-  .current__item {
-    position: relative;
-
-    &::after {
-      content: "";
-      width: 100%;
-      display: block;
-      position: absolute;
-      height: 4px;
-      background-color: @blue;
-      bottom: -25px;
-    }
-    // border-bottom: 3px solid @blue;
-  }
-
-  &__item {
-   .transition(all 0.2s ease-in-out);
-
-    &:hover {
-      color: @blue;
-    }
-  }
-}
-
-.list {
-  display: flex;
-  justify-self: end;
-  gap: 2em;
-  align-items: flex-start;
-
-  &__item {
-    height: 100%;
-  }
-
-  &__item + &__item + &__item {
-    display: none;
-    position: relative;
-
-    &::after {
-      content: "3";
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      // font-size: 8px;
-      font-weight: 500;
-      color: @white;
-      position: absolute;
-      top: -7px;
-      right: -4px;
-      width: 1.25rem;
-      height: 1.25rem;
-      background-color: @blue;
-      border-radius: 50%;
-    }
-
-    .responsive(@lg; {
-      display: block;
-    });
-  }
-
-  &__icon {
-  }
-
-  &__btn {
-    height: 100%;
-    // width: 100%;
-  }
-
-  &__item::after {
-    // content: '';
-    // // display: block;
-    // position: absolute;
-    // width: 1em;
-    // height: 1em;
-    // background-color: aqua;
-  }
-}
-
-.socials {
-  display: inline-flex;
-  gap: 2em;
-
-  &__icon {
-    .responsive(@lg; {
-      display: block;
-    });
-
-    &::before {
-      .transition(all 0.2s ease-in-out);
-    }
-
-    &:hover::before {
-      color: @blue;
-    }
-  }
-}
-
-.contact {
-  font-size: 14px;
-
-  &__text {
-    display: inline-block;
-    color: @dark-blue;
-    opacity: 50%;
-  }
-
-  &__number {
-    margin: 0 8em 0 0.5em;
-    color: @blue;
-    font-weight: 600;
-
-    &::after {
-      content: "";
-      display: inline-block;
-      width: 1em;
-      height: 1em;
-      background: url(../img/phone.svg) no-repeat bottom center;
-      margin-left: 0.5em;
-    }
-  }
-
-  .language {
-    font-size: 14px;
-    font-weight: 600;
-    position: relative;
-
-    &::before {
-      content: "";
-      display: inline-block;
-      width: 3px;
-      height: 3px;
-      background-color: @blue;
-      position: absolute;
-      top: 0.64em;
-      left: -3.86em;
-      // margin-left: 0.5em;
-    }
-
-    &::after {
-      content: "";
-      border: solid black;
-      border-width: 0 2.5px 2.5px 0;
-      display: inline-block;
-      padding: 2.5px;
-      transform: rotate(45deg);
-      -webkit-transform: rotate(45deg);
-      margin: 0 0 3px 0.5em;
-    }
-  }
-}
+@import "_components.less";
 
 .header {
   .wrapper();
@@ -221,8 +12,6 @@
 
   .responsive(@lg; {
     grid-template-columns: auto 1fr auto;
-
-    // padding: 2em 1.07em 1.07em 1.07em;
   });
 
   &__socials {
@@ -275,10 +64,6 @@
 
   &__list {
     height: 100%;
-    // display: flex;
-    // justify-self: end;
-    // gap: 2em;
-    // align-items: center;
 
     .responsive(@lg; {
       padding: 0em 1em 0 0;
@@ -291,7 +76,6 @@
 
   &__inner {
     padding: 1.43em 1.43em 0 1.43em;
-    // background-color: #f5f7fb;
     background: url(../img/pagination-mobile.svg) #f5f7fb no-repeat left bottom;
 
     .responsive(@lg; {
@@ -335,20 +119,6 @@
     });
   }
 
-  // &__btn {
-  //   background-color: @blue;
-  //   color: @white;
-  //   padding: 1.2em;
-  //   width: 100%;
-  //   font-weight: 600;
-  //   margin-bottom: 1em;
-  //   text-transform: uppercase;
-
-  //   .responsive(@lg; {
-  //     width: 50%;
-  //   });
-  // }
-
   &__img {
     width: 100%;
     display: block;
@@ -357,11 +127,6 @@
     .responsive(@lg; {
       max-width: 700px;
     });
-    // .responsive(@lg; {
-    //   // float: right;
-    //   // clear: both;
-
-    // });
   }
 }
 
@@ -374,14 +139,8 @@
   });
 
   &__box {
-    // width: 7.2em;
-    // border: 1px solid black;
     display: flex;
     align-items: center;
-    // padding: 4em;
-    // flex-direction: column;
-    // display: inline-block;
-    // vertical-align:middle;
 
     .responsive(@lg; {
       max-width: 21.64em;
@@ -406,188 +165,9 @@
   }
 }
 
-.rating {
-  //Fix (doesn't work with pseudoclass?)
-  &__icon {
-    
-    &:hover::before,
-    &:hover::before ~ &::before {
-      color: @yellow;
-    }
-  }
-
-  &__icon:hover::before {
-    color: @yellow;
-  }
-}
-
-.product {
-  position: relative;
-
-  .responsive(@lg; {
-    font-size: 18.8px;
-  });
-
-  &--new::before {
-    content: "NEW";
-    background-color: @blue;
-  }
-
-  &--top::before {
-    content: "TOP";
-    background-color: @light-green;
-  }
-
-  &--discount::before {
-    content: "-30%";
-    background-color: @red;
-  }
-
-  &::before {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 4.38em;
-    height: 2.25em;
-    text-align: center;
-    color: white;
-    font-size: 8px;
-    font-weight: 600;
-
-    .responsive(@lg; {
-      font-size: 12px;
-    });
-  }
-
-  // &__img,
-  // &__title,
-  // &__stars,
-  // &__rewevies,
-  // &__price {
-  //   position: relative;
-  //   z-index: 1;
-  // }
-
-  &__img {
-    width: 100%;
-    padding: 0.64em;
-  }
-
-  &__title {
-    font-size: 0.85em;
-    font-weight: 400;
-    padding: 0 2em 1em 2em;
-    line-height: 1.5em;
-    height: 3.5em;
-
-    .responsive(@lg; {
-      // white-space: nowrap;
-      display: block;
-      // margin-bottom: 6em;
-    });
-  }
-
-  &__stars {
-    display: inline-flex;
-    // align-items: center;
-    justify-content: center;
-    flex-direction: row-reverse;
-    // padding: 0.8em 0;
-  }
-
-  //----Rating using svg stars in html (worked)----
-
-  // &__star {
-  //   display: inline-block;
-  //   width: 0.85em;
-  //   height: 0.85em;
-  //   cursor: pointer;
-  //   // background: url(../img/star.svg) no-repeat center center;
-  //   // background-size: cover;
-
-  //   // filter: invert(98%) sepia(30%) saturate(4693%) hue-rotate(318deg) brightness(116%) contrast(109%);
-  //   fill: #cdcdcd;
-
-  //   .responsive(@lg; {
-  //     transform: scale(1.5);
-  //   });
-
-  //   circle,
-  //   line,
-  //   path {
-  //     fill: #cdcdcd;
-  //   }
-
-  //   &:hover,
-  //   &:hover ~ & {
-  //     fill: @yellow;
-
-  //     circle,
-  //     line,
-  //     path {
-  //       fill: @yellow;
-  //     }
-  //   }
-  // }
-
-  &__reviews {
-    display: block;
-    font-size: 0.7em;
-    color: #929298;
-    margin: 1em 0.5em 1em;
-
-    .responsive(@lg; {
-      display: inline-block;
-    });
-  }
-
-  &__price {
-    display: block;
-    margin-bottom: 1em;
-    font-weight: 600;
-    line-height: 12px;
-  }
-
-  &__btn-buy {
-    display: none;
-  }
-
-  &--new::before,
-  &--top::before,
-  &--discount::before {
-    position: relative;
-    z-index: 2;
-  }
-
-  &__img,
-  &__title,
-  &__stars,
-  &__reviews,
-  &__price {
-    position: relative;
-    z-index: 1;
-  }
-
-  &:hover::after  {
-    content: "";
-    position: absolute;
-    display: block;
-    top: 0.64em;
-    height: 115%;
-    width: 100%;
-    background-color: @white;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    z-index: 0;
-  }
-}
-
 .gallery {
   .wrapper();
   text-align: center;
-
-  &__title {
-  }
 
   &__text {
     display: block;
@@ -627,8 +207,6 @@
     transform: scaleX(-1);
     width: 100%;
     height: 100%;
-    // background-size: cover;
-    // background-position: 1em;
 
     .banner__title {
       transform: scaleX(-1);
@@ -648,7 +226,6 @@
   .responsive(@lg; {
     border-radius: 0 5em 0 0;
     background-position: center left 3em;
-    // transform: scaleX(-1);
 
     .banner__title {
       font-size: 50px;
@@ -688,15 +265,6 @@
   &:hover {
     background-blend-mode: normal;
   }
-
-  // &::after {
-  //   content: "";
-  //   display: block;
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 100%;
-  //   filter: brightness(50%);
-  // }
 
   .responsive(@lg; {
     background-size: contain;
@@ -797,7 +365,6 @@
   background: url(../img/backgrounds/subscribe-mobile-bg.svg) no-repeat;
   background-size: cover;
   margin-bottom: 5em;
-  // box-shadow: 0 6px 2px -2px rgba(@dark-blue, 0.4);
 
   .responsive(@lg; {
     font-size: 16px;
@@ -807,9 +374,6 @@
     justify-content: space-between;
     align-items: center;
   });
-
-  &__info {
-  }
 
   &__title {
     padding: 2em 0 1em 0;
@@ -856,9 +420,6 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap
-
-    // display: grid;
-    // grid-template-columns: 2fr repeat(3, 1fr)
   });
 
   &__contacts {
@@ -895,9 +456,6 @@
         margin-top: 1em;
       }
     }
-  }
-
-  &__logo {
   }
 
   &__socials {
@@ -955,8 +513,6 @@
 
   &__copyright {
     display: block;
-    // position: absolute;
-    // bottom: 0;
     text-align: center;
     background-color: @blue;
     width: 100%;
