--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -4,15 +4,18 @@
 
 // Colors
 @white: #ffffff;
-@dark-blue: #03133D;
 @blue: #26A9E0;
-@yellow: #FFDD15;
-@gray: #DEE7F1;
-@light-orange: #FFF9F1;
-@red: #F37A7A;
-@light-gray: #E7E8FF;
+@dirty-blue: #5ca1c8;
+@dark-blue: #03133D;
 @light-green: #A7D6CA;
-
+@yellow: #FFDD15;
+@light-orange: #FFF9F1;
+@pink: #d899bf;
+@red: #F37A7A;
+@violet: #987ef0;
+@gray: #DEE7F1;
+@light-gray: #E7E8FF;
+@dark-gray: #929298;
 
 // Breakpoints
 @xs: 0px;
