--- a/src/styles/_layout.less
+++ b/src/styles/_layout.less
@@ -1,6 +1,5 @@
 @import "_variables.less";
 @import "_mixins.less";
-@import "_components.less";
 
 .header {
   .wrapper();
@@ -193,16 +192,17 @@
 }
 
 #banner--discount {
-  background: url(../img/backgrounds/discount-bg.svg) rgba(#291762, 0.7)
+  background: url(../img/backgrounds/discount-bg.png) rgba(#291762, 0.7)
     no-repeat center right;
   background-size: contain;
 
   &:hover {
-    background-color: #987ef0;
+    background-color: @violet;
   }
 
   .responsive(@lg; {
     grid-row: 1 / 3;
+    background-image: url(../img/backgrounds/discount-bg-desktop.png);
     border-radius: 0 0 5em 0;
     transform: scaleX(-1);
     width: 100%;
@@ -215,12 +215,11 @@
 }
 
 #banner--for-men {
-  background: url(../img/backgrounds/for-men-bg.svg) rgba(@dark-blue, 0.7)
-    no-repeat;
+  background: url(../img/backgrounds/for-men-bg.png) rgba(@dark-blue, 0.7) no-repeat;
   background-size: contain;
 
   &:hover {
-    background-color: #5ca1c8;
+    background-color: @dirty-blue;
   }
 
   .responsive(@lg; {
@@ -235,12 +234,12 @@
 }
 
 #banner--dress-collection {
-  background: url(../img/backgrounds/dresses-collection-bg.svg)
+  background: url(../img/backgrounds/dresses-collection-bg.png)
     rgba(#4e2752, 0.7) no-repeat center right;
   background-size: contain;
 
   &:hover {
-    background-color: #d899bf;
+    background-color: @pink;
   }
 
   .responsive(@lg; {
@@ -284,11 +283,12 @@
   &__title {
     text-transform: uppercase;
     color: @white;
-    max-width: 7em;
-
-    & > span {
-      color: @yellow;
+    max-width: 9em;
+    
+    & > span{
       white-space: nowrap;
+      display: block;
+      color: @yellow;
     }
   }
 }
@@ -362,14 +362,14 @@
 
 .subscribe {
   .wrapper();
-  background: url(../img/backgrounds/subscribe-mobile-bg.svg) no-repeat;
+  background: url(../img/backgrounds/subscribe-mobile-bg.jpg) no-repeat;
   background-size: cover;
   margin-bottom: 5em;
 
   .responsive(@lg; {
     font-size: 16px;
     height: 28.75em;
-    background-image: url(../img/backgrounds/subscribe-desktop-bg.svg);
+    background-image: url(../img/backgrounds/subscribe-desktop-bg.jpg);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -518,7 +518,6 @@
     width: 100%;
     padding: 1em 5em;
     color: @white;
-    filter: brightness(80%);
 
     & > span {
       display: inline-block;
