--- a/src/styles/_mixins.less
+++ b/src/styles/_mixins.less
@@ -1,5 +1,13 @@
 @import '_variables.less';
 
+.wrapper {
+  padding: 1.07rem;
+
+  .responsive(@xxl; {
+    padding: 1.07rem 12.86rem;
+   });
+}
+
 .responsive(@minWidth; @content) {
   @media (min-width: @minWidth) {
       @content();
