--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -6,6 +6,7 @@
 @white: #ffffff;
 @blue: #26A9E0;
 @dirty-blue: #5ca1c8;
+@darker-blue: #2687e0;
 @dark-blue: #03133D;
 @light-green: #A7D6CA;
 @yellow: #FFDD15;
@@ -14,7 +15,7 @@
 @red: #F37A7A;
 @violet: #987ef0;
 @gray: #DEE7F1;
-@light-gray: #E7E8FF;
+@light-gray: #f5f7fb;
 @dark-gray: #929298;
 
 // Breakpoints
@@ -24,3 +25,4 @@
 @lg: 992px;
 @xl: 1200px;
 @xxl: 1400px;
+@xxxl: 1800px;
