Change icons to 'Material Design Iconic Font'

--- a/src/styles/_layout.less
+++ b/src/styles/_layout.less
@@ -71,14 +71,14 @@
     flex-direction: column;
     min-height: 550px;
     padding: 1.43em 1.43em 0 1.43em;
-    background: url(../img/pagination-mobile.svg) @light-gray no-repeat left bottom;
+    background: url(../img/features/pagination-mobile.svg) @light-gray no-repeat left bottom;
 
     .responsive(@lg; {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
 
-      background: url(../img/pagination-desktop.svg) @light-gray no-repeat 1.43em bottom;
+      background: url(../img/features/pagination-desktop.svg) @light-gray no-repeat 1.43em bottom;
     });
 
     .responsive(@xxxl; {
@@ -485,6 +485,7 @@
 
   &__socials {
     margin: 1em 0;
+    min-width: 146px;
   }
 
   &__contact {
