--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -2,7 +2,7 @@
 @import "_mixins.less";
 
 .burger {
-  background: url(../img/burger.svg) no-repeat center center;
+  background: url(../img/icons/burger.svg) no-repeat center center;
 }
 
 .btn {
@@ -46,11 +46,15 @@
 }
 
 .logo {
-  
   &__icon {
-    width: 143px;
-    height: 43px;
+    width: 103px;
+    height: 30px;
     object-fit: contain;
+
+    .responsive(@lg; {
+      width: 143px;
+      height: 43px;
+    });
   }
 }
 
@@ -125,12 +129,6 @@
       }
     }
   }
-
-  &__icon {
-    width: 1.25em;
-    height: 1.25em;
-    object-fit: cover;
-  }
 }
 
 .socials {
@@ -140,6 +138,7 @@
   height: 1em;
 
   &__icon {
+    // font-size: 1.5em;
     .responsive(@lg; {
       display: block;
     });
@@ -185,6 +184,7 @@
 
     &::before {
       content: "";
+      cursor: default;
       display: inline-block;
       width: 3px;
       height: 3px;
@@ -208,6 +208,11 @@
 }
 
 .rating {
+  .zmdi-star {
+    color: @dark-gray;
+    font-size: 1em;
+  }
+
   &__icon {
     &:hover::before,
     &:hover::before ~ &::before {
