Add popups: contact us, thank, create new account, sign in, password recovery, subscription; dropdown menu - account; slider; hover effect - product

--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -5,6 +5,331 @@
   background: url(../img/icons/burger.svg) no-repeat center center;
 }
 
+.submenu {
+  position: relative;
+  visibility: hidden;
+  background-color: @white;
+  box-shadow: 2px 2px 20px 2px @dark-gray;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: absolute;
+  top: 4em;
+  right: 0;
+  padding: 0.5em 0;
+  width: 14em;
+
+  .responsive(@lg; {
+    width: 18em;
+  });
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -0.5em;
+    left: 12em;
+    display: block;
+    width: 1em;
+    height: 1em;
+    background-color: @white;
+    transform: rotate(45deg);
+
+    .responsive(@lg; {
+      left: 6.5em;
+    });
+  }
+
+  &__btn {
+    text-align: left;
+    padding: 0.5em;
+    width: 100%;
+    .transition(all 0.2s ease-in-out);
+
+    &:hover {
+      background-color: rgb(@blue, 0.2);
+    }
+
+    &::before {
+      font-family: Material-Design-Iconic-Font;
+      margin-right: 0.5em;
+      .transition(all 0.2s ease-in-out);
+    }
+
+    &--sign-in {
+      &::before {
+        content: "\f1cc";
+      }
+      &:hover::before {
+        color: @blue;
+      }
+    }
+
+    &--create-account {
+      &::before {
+        content: "\f1ff";
+      }
+      &:hover::before {
+        color: @blue;
+      }
+    }
+  }
+}
+
+.modal-overlay {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(@dark-gray, 0.7);
+  display: grid;
+  display: flex;
+  justify-content: center;
+  place-items: center;
+  visibility: hidden;
+  transition: var(--transition);
+  z-index: -10;
+}
+
+.bgImage {
+  .responsive(@md; {
+    width: 20em;
+  background: url(../img/backgrounds/create-account-bg.jpg) no-repeat center
+    center;
+  background-size: cover;
+  });
+}
+
+.modal {
+  padding: 4em 1em 1em 1em;
+  overflow: hidden;
+  position: fixed;
+  background-color: @white;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  .responsive(@md; {
+    padding: 3em;
+  });
+
+  &__btn-close {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    width: 3rem;
+    height: 3rem;
+    border: 1px solid @gray;
+    border-radius: 50%;
+    .transition(all 0.2s ease-in-out);
+
+    &:hover {
+      background-color: @blue;
+      border-color: @blue;
+      color: @white;
+    }
+  }
+
+  &__text {
+    margin-bottom: 2em;
+  }
+
+  &__agreement {
+    margin-top: 1em;
+  }
+
+  .form__agreement {
+    margin: 1em 0 1.5em 0;
+  }
+
+  .btn {
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  &__text-container {
+    text-align: center;
+    // margin-top: 1em;
+  }
+
+  & &__anchor {
+    color: @blue;
+    text-decoration: underline;
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  &__label {
+    position: relative;
+
+    &::before {
+      content: "";
+      font-family: Material-Design-Iconic-Font;
+      display: inline-block;
+      position: absolute;
+      top: 0.7em;
+      left: 1em;
+      color: @blue;
+    }
+
+    &--username::before {
+      content: "\f207";
+    }
+
+    &--phone::before {
+      content: "\f2be";
+    }
+
+    &--email::before {
+      content: "\f15a";
+    }
+
+    &--email::before {
+      content: "\f15a";
+    }
+
+    &--confirm-password::before,
+    &--password::before {
+      content: "\f191";
+    }
+
+    .password-container {
+      position: absolute;
+      top: 1em;
+      right: 1em;
+    }
+
+    &--see-password {
+      content: "\f15c";
+    }
+
+    &--incorrect {
+      &::before {
+        color: @red;
+      }
+
+      &::after {
+        content: "\f1f1";
+        font-family: Material-Design-Iconic-Font;
+        display: inline-block;
+        position: absolute;
+        top: 0.7em;
+        right: 1em;
+        color: @red;
+      }
+    }
+  }
+
+  &__input {
+    border: 1.5px solid @gray;
+    padding: 1em 1em 1em 2.5em;
+    margin-bottom: 0.5em;
+
+    &:focus {
+      // border: none;
+      outline: none;
+      outline-style: solid;
+      border-color: @blue;
+    }
+
+    &--incorrect {
+      color: @red;
+
+      &:focus {
+        border-color: @red;
+      }
+
+      &::placeholder {
+        color: @red;
+      }
+    }
+  }
+}
+
+.open-modal {
+  visibility: visible;
+  z-index: 10;
+}
+
+.slider {
+  display: flex;
+  overflow: hidden;
+  max-width: 35%;
+
+  &__line {
+    display: flex;
+    .transition(all 2s ease-in-out);
+  }
+
+  &__img {
+    display: block;
+    height: 290px;
+    width: 200px;
+    object-fit: contain;
+    object-position: bottom;
+    background: url(../img/backgrounds/circle-bg.png) no-repeat center center;
+    background-size: cover;
+
+    .responsive(@lg; {
+      height: 500px;
+      width: 600px;
+    });
+  }
+}
+
+.cart {
+  // display: none;
+  width: 100%;
+
+  .product {
+    display: flex;
+    height: 152px;
+    padding: 25px 0;
+    border-top: 1px solid @dark-gray;
+    border-bottom: 1px solid @dark-gray;
+
+    &__img {
+      height: 100px;
+      width: 100px;
+    }
+
+    &__info {
+
+    }
+
+    &__title {
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    &__text {
+      color: @dark-gray;
+    }
+
+    &__color {
+    }
+
+    &__size {
+    }
+
+    &__amount {
+    }
+
+    &__price {
+    }
+
+    &__delete {
+    }
+  }
+}
+
 .btn {
   background-color: @blue;
   color: @white;
@@ -22,6 +347,22 @@
   .responsive(@lg; {
     width: 18.85rem;
   });
+}
+
+.outline-btn {
+  background-color: @white;
+  color: @black;
+  border: 1px solid @blue;
+  padding: 1.76rem;
+  width: 100%;
+  font-weight: 600;
+  text-transform: uppercase;
+  .transition(all 0.2s ease-in-out);
+
+  &:hover {
+    background-color: @blue;
+    color: @white;
+  }
 }
 
 .banner-title {
@@ -86,6 +427,7 @@
   gap: 1em;
   justify-self: end;
   align-items: flex-start;
+  position: relative;
 
   &__item {
     height: 100%;
@@ -168,11 +510,12 @@
     font-weight: 600;
 
     &::after {
-      content: "";
+      content: "\f2be";
+      font-family: Material-Design-Iconic-Font;
       display: inline-block;
       width: 1em;
       height: 1em;
-      background: url(../img/phone.svg) no-repeat bottom center;
+      // background: url(../img/phone.svg) no-repeat bottom center;
       margin-left: 0.5em;
     }
   }
@@ -214,14 +557,15 @@
   }
 
   &__icon {
-    &:hover::before,
-    &:hover::before ~ &::before {
+    cursor: pointer;
+
+    &:hover {
       color: @yellow;
     }
-  }
 
-  &__icon:hover::before {
-    color: @yellow;
+    &:hover ~ & {
+      color: @yellow;
+    }
   }
 }
 
@@ -265,16 +609,105 @@
   }
 
   &__img {
-    height: 120px;
-    width: 120px;
+    height: 145px;
+    width: 145px;
     object-fit: contain;
     vertical-align: top;
-    padding: 0.64em;
+    padding: 0.5em;
+
+    .responsive(@sm; {
+      height: 200px;
+      width: 200px;
+      padding: 1em;
+    });
+
+    .responsive(@md; {
+      height: 250px;
+      width: 250px;
+    });
 
     .responsive(@lg; {
       height: 320px;
       width: 320px;
     });
+  }
+
+  &__info {
+    position: relative;
+  }
+
+  &__color {
+    visibility: hidden;
+    position: absolute;
+    top: 0em;
+    left: 1em;
+    display: block;
+    width: 1.3em;
+    height: 1.3em;
+    cursor: pointer;
+
+    &--input {
+      left: 1.5em;
+      visibility: hidden;
+    }
+
+    &--black {
+      background-color: @black;
+    }
+
+    &--gray {
+      background-color: @dark-gray;
+    }
+
+    &--dirty-blue {
+      background-color: @dirty-blue;
+    }
+
+    &--red {
+      background-color: @red;
+    }
+  }
+
+  &__buttons {
+    visibility: hidden;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1em 1em 1em;
+    width: 100%;
+    gap: 1em;
+  }
+
+  &__btn {
+    margin: 0;
+    padding: 0.5rem;
+
+    .responsive(@sm; {
+      padding: 1.76em;
+    });
+  }
+
+  &__favorite {
+    border: 2px solid @blue;
+    width: 30%;
+    background-color: @white;
+    .transition(background-color 0.2s ease-in-out);
+
+    &::after {
+      font-family: Material-Design-Iconic-Font;
+      content: "\f15e";
+      font-size: calc(2em - 2px);
+      color: @blue;
+      .transition(color 0.5s ease-in-out);
+    }
+
+    &:hover {
+      background-color: @blue;
+
+      &::after {
+        content: "\f15f";
+        color: @white;
+      }
+    }
   }
 
   &__title {
