--- a/src/styles/_layout.less
+++ b/src/styles/_layout.less
@@ -68,10 +68,12 @@
 
   &__inner {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     min-height: 550px;
     padding: 1.43em 1.43em 0 1.43em;
-    background: url(../img/features/pagination-mobile.svg) @light-gray no-repeat left bottom;
+    background: url(../img/features/pagination-mobile.svg) @light-gray no-repeat
+      left bottom;
 
     .responsive(@lg; {
       flex-direction: row;
@@ -122,21 +124,11 @@
     });
   }
 
-  &__img {
-    display: block;
-    // width: 80%;
-    height: 290px;
-    width: 200px;
-    object-fit: contain;
+  &__slider {
     align-self: center;
-    background: url(../img/backgrounds/circle-bg.png) no-repeat center center;
-    background-size: cover;
 
     .responsive(@lg; {
       align-self: flex-end;
-      // max-width: 500px;
-      height: 500px;
-      width: 500px;
     });
   }
 }
@@ -192,7 +184,15 @@
   &__wrapper {
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(auto-fit, 120px);
+    grid-template-columns: repeat(2, 145px);
+
+    .responsive(@sm; {
+      grid-template-columns: repeat(auto-fit, 210px);
+    });
+
+    .responsive(@md; {
+      grid-template-columns: repeat(auto-fit, 250px);
+    });
 
     .responsive(@lg; {
       grid-template-columns: repeat(auto-fit, 320px);
@@ -201,6 +201,39 @@
 
   &__product {
     border: 1px solid @gray;
+    height: 310px;
+
+    .responsive(@sm; {
+      height: 365px;
+    });
+
+    .responsive(@md; {
+      height: 420px;
+    });
+
+    .responsive(@lg; {
+      height: 500px;
+    });
+
+    &--active {
+      background-color: @white;
+      box-shadow: 2px 10px 20px 0px @dark-gray;
+      z-index: 2;
+      height: 370px;
+
+      .responsive(@sm; {
+        height: 440px;
+      });  
+
+      .responsive(@md; {
+        height: 490px;
+      });
+
+      .responsive(@lg; {
+        height: 565px;
+      });
+
+    }
   }
 
   &__btn {
@@ -423,6 +456,10 @@
   }
 
   &__form {
+    .form__label--sub-email {
+      display: none;
+    }
+
     .responsive(@xl; {
       display: grid;
       grid-template-columns: 1fr 0.5fr;
