--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -13,6 +13,7 @@
 @light-orange: #FFF9F1;
 @pink: #d899bf;
 @red: #F37A7A;
+@dark-red: #EE4545;
 @violet: #987ef0;
 @gray: #DEE7F1;
 @light-gray: #f5f7fb;
