Add icons (font awesome)

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -42,8 +42,9 @@ a {
 .icon {
   color: v.$white;
   transition: all 0.3s;
-  font-size: 1.5em;
+  font-size: 1em;
   pointer-events: none;
+  margin: 0 0.3em;
 
   @include m.transition(all 0.3s ease-in-out);
 }
