--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -75,13 +75,19 @@
 }
 
 .header {
+  @include m.container();
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid black;
   margin-bottom: 3em;
   background-color: rgb(134, 117, 158);
-  @include m.container();
+
+  & .icon {
+    color: v.$black;
+    background-color: #fff;
+    border-radius: 50% 50% 0 0;
+  }
 
   @include m.respond-to("sm") {
     flex-wrap: wrap;
@@ -241,12 +247,10 @@
     text-align: center;
 
     & > span {
-
       @include m.respond-to(sm) {
-       display: block;
+        display: block;
       }
     }
-
 
     & + & {
       &::before {
@@ -263,7 +267,6 @@
           height: 3em;
         }
       }
-
     }
   }
 }
