Add closing of submenu when user clicks outside; add slosing of modal window when user presses 'Esc'; add shopping cart functionality

--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -410,9 +410,6 @@
       left: 2.3em;
     }
 
-    &__size {
-    }
-
     &__size-value {
       margin-left: 0.3em;
     }
@@ -431,6 +428,8 @@
     &__price {
       font-size: 20px;
       font-weight: 600;
+      width: 150px;
+      text-align: center;
     }
 
     &__delete-btn {
@@ -740,9 +739,11 @@
 }
 
 .rating {
+  
   .zmdi-star {
     color: @dark-gray;
     font-size: 1em;
+    pointer-events: all;
   }
 
   &__icon {
@@ -838,6 +839,14 @@
     &--input {
       left: 1.5em;
       visibility: hidden;
+
+      &:checked + label{
+        border: 2px solid white;
+        outline: 2px solid black;
+      }
+      &:focus + label{
+        border: 4px solid black;
+      }
     }
 
     &--black {
