--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -668,7 +668,8 @@
   height: 1em;
 
   &__icon {
-    // font-size: 1.5em;
+    pointer-events: all;
+
     .responsive(@lg; {
       display: block;
     });
